--- a/app/src/main/res/layout/activity__update_deals.xml
+++ b/app/src/main/res/layout/activity__update_deals.xml
@@ -13,12 +13,14 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingTop="100dp"
+        android:paddingTop="20dp"
         >
 
-        //List of deals
-
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/UpdateDeals_LST_dealsList"
+            android:layout_width="match_parent"
+            android:layout_height="462dp"
+            android:layout_marginBottom="25dp" />
 
         <Button
             android:id="@+id/UpdateDeals_BTN_Add"
@@ -27,7 +29,7 @@
             android:textColor="#ffffff"
             android:textSize="20dp"
             android:background="@drawable/mybtn"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="50dp"
             android:text="Add New deal"
             />
 
@@ -35,12 +37,11 @@
             android:id="@+id/UpdateDeals_PRBR_progressBar"
             style="@style/Widget.AppCompat.ProgressBar"
             android:layout_width="70dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
             android:progressTint="#EFC957"
-            android:visibility="invisible"/>
-
+            android:visibility="invisible" />
     </LinearLayout>
+
     <ImageView
         android:id="@+id/LogIn_IMG_logo"
         android:layout_width="94dp"
