--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="colorTextShadow">#7F000000</color>
     <color name="colorTextShadowWhite">#FFFFFF</color>
     <color name="colorDarkText">#D7151515</color>
-    <color name="colorLightYellow">#F1E153</color>
+    <color name="colorLightYellow">#FFF280</color>
 </resources>
