--- a/app/src/main/res/layout/dialog_item.xml
+++ b/app/src/main/res/layout/dialog_item.xml
@@ -1,33 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/mybtnyellow">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            >
             <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
+                android:id="@+id/Dialog_Item_NBTM_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Price"
-                android:textSize="20dp"/>
-
-            <EditText
-                android:id="@+id/UpdateDeal_EDT_price"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:hint="Price"
-                android:inputType="numberDecimal"
-                android:background="@drawable/round_corner"
-                />
-        </LinearLayout>
+                android:visibility="visible"
+                android:layout_gravity="center"
+                app:backGroundColor="@color/colorBTN"
+                android:background="@drawable/mybtn"/>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
