--- a/app/src/main/res/layout/activity__order.xml
+++ b/app/src/main/res/layout/activity__order.xml
@@ -16,12 +16,15 @@
         android:paddingTop="30dp"
         >
 
-        <TextView
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/Order_EDT_customerMail"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:text="Orders"
-            android:textSize="30dp" />
-
+            android:hint="Customer email address"
+            android:inputType="textEmailAddress"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,8 +44,8 @@
                     >
                     <Button
                         android:id="@+id/Order_BTN_cocktails"
-                        android:layout_width="100dp"
-                        android:layout_height="80dp"
+                        android:layout_width="90dp"
+                        android:layout_height="70dp"
                         android:background="@drawable/cocktail_menu"
                         android:layout_gravity="center"
                         android:textColor="#CC3636"
@@ -66,8 +69,8 @@
                     >
                     <Button
                         android:id="@+id/Order_BTN_Wines"
-                        android:layout_width="100dp"
-                        android:layout_height="80dp"
+                        android:layout_width="90dp"
+                        android:layout_height="70dp"
                         android:background="@drawable/wine"
                         android:layout_gravity="center"
                         android:textColor="#CC3636"
@@ -86,7 +89,6 @@
 
             <TableRow
                 android:layout_height="185dp"
-                android:layout_marginBottom="5dp"
                 android:gravity="center"
                 android:padding="10dp">
                 <LinearLayout
@@ -98,8 +100,8 @@
                     >
                     <Button
                         android:id="@+id/Order_BTN_Daily_Beers"
-                        android:layout_width="100dp"
-                        android:layout_height="80dp"
+                        android:layout_width="90dp"
+                        android:layout_height="70dp"
                         android:background="@drawable/beer"
                         android:layout_gravity="center"
                         android:textColor="#CC3636"
@@ -122,8 +124,8 @@
 
                     <Button
                         android:id="@+id/Order_BTN_Chasers"
-                        android:layout_width="100dp"
-                        android:layout_height="80dp"
+                        android:layout_width="90dp"
+                        android:layout_height="70dp"
                         android:background="@drawable/chaser"
                         android:layout_gravity="center"
                         android:textColor="#CC3636"
@@ -147,14 +149,13 @@
                     android:orientation="vertical"
                     android:background="@drawable/mybtnyellow"
                     android:layout_marginRight="20dp"
-                    android:paddingBottom="5dp"
                     android:paddingTop="10dp"
                     >
 
                     <Button
                         android:id="@+id/Order_BTN_Daily_SoftDrinks"
-                        android:layout_width="100dp"
-                        android:layout_height="80dp"
+                        android:layout_width="90dp"
+                        android:layout_height="70dp"
                         android:background="@drawable/juice"
                         android:layout_gravity="center"
                         android:textColor="#CC3636"
@@ -177,8 +178,8 @@
 
                     <Button
                         android:id="@+id/Order_BTN_Food"
-                        android:layout_width="100dp"
-                        android:layout_height="80dp"
+                        android:layout_width="90dp"
+                        android:layout_height="70dp"
                         android:background="@drawable/pizza"
                         android:layout_gravity="center"
                         android:textColor="#CC3636"
@@ -202,14 +203,13 @@
                     android:orientation="vertical"
                     android:background="@drawable/mybtnyellow"
                     android:layout_marginRight="20dp"
-                    android:paddingBottom="5dp"
                     android:paddingTop="10dp"
                     >
 
                     <Button
                         android:id="@+id/Order_BTN_Daily_Deals"
-                        android:layout_width="100dp"
-                        android:layout_height="80dp"
+                        android:layout_width="90dp"
+                        android:layout_height="70dp"
                         android:background="@drawable/deal"
                         android:layout_gravity="center"
                         android:textColor="#CC3636"
