--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -25,7 +25,7 @@
 
 
             <TextView
-                android:id="@+id/dealView_TXT_description"
+                android:id="@+id/itemView_TXT_description"
                 android:layout_width="293dp"
                 android:layout_height="38dp"
                 android:layout_marginStart="8dp"
@@ -40,7 +40,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/dealView_TXT_price"
+                android:id="@+id/itemView_TXT_price"
                 android:layout_width="86dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="102dp"
@@ -52,7 +52,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dealView_TXT_description"
+                app:layout_constraintTop_toBottomOf="@+id/itemView_TXT_description"
                 app:layout_constraintVertical_bias="1.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
