errors toast message on free drinks dialog

--- a/app/src/main/res/layout/dialog_freedrinks.xml
+++ b/app/src/main/res/layout/dialog_freedrinks.xml
@@ -25,5 +25,9 @@
         android:inputType="textEmailAddress"
         android:background="@drawable/round_corner"
         />
+    <TextView
+        android:id="@+id/UpdateDeal_EDT_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
