--- a/app/src/main/res/layout/activity__add_deal.xml
+++ b/app/src/main/res/layout/activity__add_deal.xml
@@ -6,7 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".Activity_AddDeal"
     android:background="@color/colorBackground">
-
+    <Button
+        android:id="@+id/AddDeal_BTN_back"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:background="@drawable/back"
+        android:layout_gravity="left"
+        android:layout_marginTop="10dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,14 +22,12 @@
         android:paddingTop="100dp"
         >
 
-
-
         <EditText
 
             android:id="@+id/AddDeal_EDT_description"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:hint="Deal description"
+            android:hint="@string/deal_description"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +39,7 @@
             android:id="@+id/AddDeal_EDT_price"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:hint="Price"
+            android:hint="@string/price"
             android:inputType="numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +54,7 @@
             android:textSize="20dp"
             android:background="@drawable/mybtn"
             android:layout_marginBottom="40dp"
-            android:text="Add"
+            android:text="@string/add"
             />
 
         <ProgressBar
