--- a/app/src/main/res/layout/activity__deals_display.xml
+++ b/app/src/main/res/layout/activity__deals_display.xml
@@ -16,6 +16,14 @@
         android:paddingTop="20dp"
         >
 
+        <Button
+            android:id="@+id/Deals_BTN_back"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:background="@drawable/back"
+            android:layout_gravity="left"
+          />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/Deals_LST_dealsList"
             android:layout_width="match_parent"
