--- a/app/src/main/res/layout/activity_view_order.xml
+++ b/app/src/main/res/layout/activity_view_order.xml
@@ -15,6 +15,13 @@
         android:orientation="vertical"
         android:paddingTop="20dp"
         >
+        <Button
+            android:id="@+id/Order_BTN_back"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:background="@drawable/back"
+            android:layout_gravity="left"
+            />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/Order_LST_dealsList"
@@ -25,7 +32,7 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/Deals_IMG_logo"
+        android:id="@+id/Order_IMG_logo"
         android:layout_width="94dp"
         android:layout_height="136dp"
         android:layout_gravity="bottom|right"
