--- a/app/src/main/res/layout/dialog_freedrinks.xml
+++ b/app/src/main/res/layout/dialog_freedrinks.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Customer Email"
+        android:text="@string/customer_email"
         android:textSize="20dp"
        />
 
@@ -21,7 +21,6 @@
         android:id="@+id/UpdateDeal_EDT_Email"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:hint="Email"
         android:inputType="textEmailAddress"
         android:background="@drawable/round_corner"
         />
